Continued full recalc improvements

--- a/rollup/core/classes/RollupFullRecalcProcessor.cls
+++ b/rollup/core/classes/RollupFullRecalcProcessor.cls
@@ -69,7 +69,6 @@ global abstract without sharing class RollupFullRecalcProcessor extends RollupAs
         for (Rollup__mdt meta : conductor.rollupMetas) {
           conductor.storeUniqueParentFields(meta);
         }
-        conductor.uniqueParentFields.addAll(this.uniqueParentFields);
       }
       for (RollupFullRecalcProcessor caboose : this.cabooses) {
         conductor.addCaboose(caboose);
@@ -89,8 +88,7 @@ global abstract without sharing class RollupFullRecalcProcessor extends RollupAs
     }
   }
 
-  public override void storeParentResetField(String lookupField, SObject parent) {
-    this.previouslyResetParents.add(String.valueOf(parent.get(lookupField)));
+  public void trackParentRecord(SObject parent) {
     this.postProcessor?.recordIds.add(parent.Id);
   }
 
