--- a/rollup/core/classes/RollupFullRecalcProcessor.cls
+++ b/rollup/core/classes/RollupFullRecalcProcessor.cls
@@ -65,11 +65,8 @@ global abstract without sharing class RollupFullRecalcProcessor extends RollupAs
   public void finish() {
     if (this.cabooses.isEmpty() == false) {
       RollupFullRecalcProcessor conductor = this.cabooses.remove(0);
-      if (conductor.rollupMetas != null) {
-        for (Rollup__mdt meta : conductor.rollupMetas) {
-          conductor.storeUniqueParentFields(meta);
-        }
-        conductor.uniqueParentFields.addAll(this.uniqueParentFields);
+      for (Rollup__mdt meta : conductor.rollupMetas) {
+        conductor.storeUniqueParentFields(meta);
       }
       for (RollupFullRecalcProcessor caboose : this.cabooses) {
         conductor.addCaboose(caboose);
@@ -89,8 +86,7 @@ global abstract without sharing class RollupFullRecalcProcessor extends RollupAs
     }
   }
 
-  public override void storeParentResetField(String lookupField, SObject parent) {
-    this.previouslyResetParents.add(String.valueOf(parent.get(lookupField)));
+  public void trackParentRecord(SObject parent) {
     this.postProcessor?.recordIds.add(parent.Id);
   }
 
